--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,12 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
   animate_do: ^2.0.0
   cupertino_icons: ^1.0.2
   fluro: ^2.0.3
+  flutter:
+    sdk: flutter
+  font_awesome_flutter: ^10.7.0
   google_fonts: ^6.1.0
   provider: ^5.0.0
   universal_html: ^2.0.8
